Fix scrollbar on cha[ter book

--- a/v2/addon-css/scss/addon.scss
+++ b/v2/addon-css/scss/addon.scss
@@ -100,22 +100,11 @@ dialog.modalContent {
   }
 
   .chapter-book-content {
+    @extend #customScroll--brown;
     position: relative;
     z-index: 1;
     overflow-y: auto;
-    padding-right: 10px;
-    padding-left: 10px;
-    scrollbar-width: thin;
-
-    &::-webkit-scrollbar {
-      width: 10px;
-      height: 10px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: var(--clr-brandBeige);
-      border-radius: 10px;
-    }
+    padding-right: 0.5em;
 
     .chapter-book-img {
       max-width: 600px;
